Correct date and add changeling

--- a/draft-ietf-dprive-xfr-over-tls-01.html
+++ b/draft-ietf-dprive-xfr-over-tls-01.html
@@ -418,7 +418,7 @@
 
   <meta name="dct.creator" content="Zhang, H., Aras, P., Toorop, W., Dickinson, S., and A. Mankin" />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-dprive-xfr-over-tls-01" />
-  <meta name="dct.issued" scheme="ISO8601" content="2020-5-19" />
+  <meta name="dct.issued" scheme="ISO8601" content="2020-5-20" />
   <meta name="dct.abstract" content="DNS zone transfers are transmitted in clear text, which gives attackers the opportunity to collect the content of a zone by eavesdropping on network connections. The DNS Transaction Signature (TSIG) mechanism is specified to restrict direct zone transfer to authorized clients only, but it does not add confidentiality. This document specifies use of DNS-over-TLS to prevent zone contents collection via passive monitoring of zone transfers.  " />
   <meta name="description" content="DNS zone transfers are transmitted in clear text, which gives attackers the opportunity to collect the content of a zone by eavesdropping on network connections. The DNS Transaction Signature (TSIG) mechanism is specified to restrict direct zone transfer to authorized clients only, but it does not add confidentiality. This document specifies use of DNS-over-TLS to prevent zone contents collection via passive monitoring of zone transfers.  " />
 
@@ -446,7 +446,7 @@
   <td class="right">W. Toorop</td>
 </tr>
 <tr>
-  <td class="left">Expires: November 20, 2020</td>
+  <td class="left">Expires: November 21, 2020</td>
   <td class="right">NLnet Labs</td>
 </tr>
 <tr>
@@ -467,7 +467,7 @@
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">May 19, 2020</td>
+  <td class="right">May 20, 2020</td>
 </tr>
 
     	
@@ -487,7 +487,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on November 20, 2020.</p>
+<p>This Internet-Draft will expire on November 21, 2020.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -748,13 +748,22 @@
 <p/>
 
 <ul>
+  <li>Minor editorial updates</li>
+  <li>Add requirement for TLS 1.3. or later</li>
+</ul>
+
+<p> </p>
+<p id="rfc.section.14.p.3">draft-ietf-dprive-xfr-over-tls-00 </p>
+<p/>
+
+<ul>
   <li>Rename after adoption and reference update.</li>
   <li>Add placeholder for SIG(0) discussion</li>
   <li>Update section on ZONEMD</li>
 </ul>
 
 <p> </p>
-<p id="rfc.section.14.p.3">draft-hzpa-dprive-xfr-over-tls-02 </p>
+<p id="rfc.section.14.p.5">draft-hzpa-dprive-xfr-over-tls-02 </p>
 <p/>
 
 <ul>
@@ -762,7 +771,7 @@
 </ul>
 
 <p> </p>
-<p id="rfc.section.14.p.5">draft-hzpa-dprive-xfr-over-tls-01 </p>
+<p id="rfc.section.14.p.7">draft-hzpa-dprive-xfr-over-tls-01 </p>
 <p/>
 
 <ul>
@@ -770,7 +779,7 @@
 </ul>
 
 <p> </p>
-<p id="rfc.section.14.p.7">draft-hzpa-dprive-xfr-over-tls-00 </p>
+<p id="rfc.section.14.p.9">draft-hzpa-dprive-xfr-over-tls-00 </p>
 <p/>
 
 <ul>
